# discord-lumberjack

./: README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: documentation.yml  format.yml  post_merge_main.yml  pull_request_main.yml  pypi.yml  pytest.yml  release.yml  run_tests.yml  skip_tests.yml  skip_tests_label.yml  skip_tests_paths.yml
discord_lumberjack/: __init__.py
discord_lumberjack/handler/: __init__.py  discord_channel_handler.py  discord_dm_handler.py  discord_handler.py  discord_webhook_handler.py
discord_lumberjack/handlers/: __init__.py  discord_channel_handler.py  discord_dm_handler.py  discord_handler.py  discord_webhook_handler.py
discord_lumberjack/message_creator/: __init__.py  embed.py  log_colours.py  message_creator.py
discord_lumberjack/message_creators/: __init__.py  basic_message_creator.py  chunks.py  embed.py  embed_long_message_creator.py  embed_message_creator.py  log_colours.py  message_creator.py
docs/discord_lumberjack/: index.html
py_logging_discord/: __init__.py
py_logging_discord/handler/: __init__.py  discord_channel_handler.py  discord_dm_handler.py  discord_handler.py  discord_webhook_handler.py
py_logging_discord/message_creator/: __init__.py  basic_message_creator.py  embed_message_creator.py  message_creator.py
test/: conftest.py  test_handlers.py  test_message_creators.py
test/test_handlers/: test_channel_handler.py  test_dm_handler.py  test_handler.py  test_webhook_handler.py
tests/: conftest.py  test_handlers.py  test_message_creators.py  utils.py
(+18 files in other folders)
