[tool.poetry]
name = "discord-lumberjack"
version = "1.1.3"
description = "A Python logging handler which sends its logs to a Discord Channel"
authors = ["Abraham Murciano <abrahammurciano@gmail.com>"]
license = "GPLv3"
readme = "README.md"
repository = "https://github.com/abrahammurciano/discord-lumberjack"
documentation = "https://abrahammurciano.github.io/discord-lumberjack/discord-lumberjack"
keywords = ["discord", "logging"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.26"

[tool.poetry.dev-dependencies]
types-requests = "^2.27.30"
pytest = "^7.1.2"
pytest-timeout = "^2.1.0"
python-dotenv = "^0.20.0"
black = "^22.3.0"
toml = "^0.10.2"
types-toml = "^0.10.7"
pdoc3 = "^0.10.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
